argocd/applications/miniflux/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "miniflux"
  labels:
    app: "miniflux"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: "miniflux"
  template:
    metadata:
      labels:
        app: "miniflux"
    spec:
      containers:
        - name: "miniflux"
          image: "miniflux/miniflux:2.2.1"
          ports:
            - name: "app"
              containerPort: 8080

        - name: "postgres"
          image: "postgres:latest"
          ports:
            - name: "db"
              containerPort: 5432
          volumeMounts:
            - name: "postgres-data"
              mountPath: "/var/lib/postgresql/data"

      volumes:
        - name: "postgres-data"
          persistentVolumeClaim:
            claimName: "postgres-data"
