argocd/applications/miniflux/db.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "miniflux"
    service: "miniflux-postgres"
  name: "miniflux-postgres"
  namespace: "miniflux"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "miniflux"
      service: "miniflux-postgres"

  template:
    metadata:
      labels:
        app: "miniflux"
        service: "miniflux-postgres"
      name: "miniflux-postgres"
      namespace: "miniflux"

    spec:
      containers:
        - name: "miniflux-postgres"
          # version 17.4
          image: "postgres:sha256:7f29c02ba9eeff4de9a9f414d803faa0e6fe5e8d15ebe217e3e418c82e652b35"
          imagePullPolicy: "IfNotPresent"

          ports:
            - name: "db"
              containerPort: 5432

          volumeMounts:
            - name: "postgres-data"
              mountPath: "/var/lib/postgresql/data"

      imagePullSecrets:
        - name: "dockerhub-tlake-read-only"

      volumes:
        - name: "postgres-data"
          persistentVolumeClaim:
            claimName: "postgres-data"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "miniflux"
    service: "miniflux-postgres"
  name: "miniflux-postgres"
  namespace: "miniflux"

spec:
  ports:
    - name: "db"
      port: 5432
      protocol: TCP
      targetPort: "db"

  selector:
    app: "miniflux"
    service: "miniflux-postgres"

  type: NodePort
