argocd/applications/miniflux/app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "miniflux"
    service: "miniflux-app"
  name: "miniflux-app"
  namespace: "miniflux"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "miniflux"
      service: "miniflux-app"

  template:
    metadata:
      labels:
        app: "miniflux"
        service: "miniflux-app"
      name: "miniflux-app"
      namespace: "miniflux"

    spec:
      containers:
        - name: "miniflux-app"
          image: "miniflux/miniflux:2.2.1"

          ports:
            - name: "app"
              containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "miniflux"
    service: "miniflux-app"
  name: "miniflux-app"
  namespace: "miniflux"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "app"

  selector:
    app: "miniflux"
    service: "miniflux-app"

  type: NodePort

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "miniflux"
    service: "miniflux-app"
  name: "miniflux-web"
  namespace: "miniflux"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`rss.tlake.io`)
      kind: Rule
      services:
        - name: "miniflux-app"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "miniflux"
    service: "miniflux-app"
  name: "miniflux-websecure"
  namespace: "miniflux"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`rss.tlake.io`)
      kind: Rule
      services:
        - name: "miniflux-app"
          port: "http-traffic"

  tls:
    certResolver: "production"
